Revert "fix: too much to write in one sentence. (#103)"
This reverts commit ad5e59f8f2358a3bc7e75c2ab3a729b7080098a4, reversing
changes made to 5274b63caef7a916780149e7f09b90b8b2875803.

--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -62,10 +62,6 @@ div[class^="actionButtons-"] {
   [class*="lookLink-"][class*="colorPrimary-"] {
     color: $text;
   }
-  [class*="lookFilled-"][class*="colorTransparent-"] {
-    color: $text;
-    background-color: $surface0;
-  }
 }
 
 // dangerous button when hovered is colored properly
