--- a/src/components/_chat.scss
+++ b/src/components/_chat.scss
@@ -411,14 +411,4 @@ div[class*="chat-"] {
       background-color: $surface1;
     }
   }
-
-  // Empty Pages
-  div[class*="emptyPage"] {
-    background-color: $base;
-  }
-
-  // Stupid gradient
-  div[class*="innerHeader"]:after {
-    background: none;
-  }
 }
